# Cookonomics

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  items.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: item.py  user.py
backend/app/services/: item_service.py  user_service.py
backend/scripts/: format.sh  start.sh
backend/tests/: test_main.py
data/inputs/: .gitkeep
data/outputs/: .gitkeep
docker/: README.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cleanup-logs.js  docker-compose.yml  nginx.conf  package-lock.json  package.json
frontend/cookonomics/: README.md  pubspec.yaml
frontend/cookonomics/lib/: main.dart
frontend/cookonomics/linux/: CMakeLists.txt  my_application.cc
frontend/cookonomics/test/: widget_test.dart
frontend/cookonomics/web/: index.html  manifest.json
frontend/cookonomics/windows/: CMakeLists.txt
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: AuthPage.js  BackgroundDecoration.js  CalendarModal.js  DateSelectionModal.js  Floating3DElements.js  ImageUploadModal.js  Layout.js  MealPlanDisplay.js  MealPlanStorage.js  NutritionSummaryCard.js  RecipeCarousel.js  RecipeSelector.js  ResultModal.js  UserInputForm.css  UserInputForm.js  WorkflowSelector.js
frontend/src/constants/: formConstants.js
frontend/src/data/: mockData.js
frontend/src/hooks/: useUserInputForm.js  useWorkflowWebSocket.js
frontend/src/pages/: CalendarPage.js  Dashboard.js  MealPlansPage.js  NewFeaturesTest.js  (+3 more)
logs/: .gitkeep
shared/: README.md
(+25 files in other folders)
